zero-cost-templating/tests/ui/compile_fail/variable_macro_missing_first_parameter.stderr
error: no rules expected the token `,`
  --> tests/ui/compile_fail/variable_macro_missing_first_parameter.rs:14:33
   |
9  | #[template_stream("../../../../zero-cost-templating/test.html.hbs")]
   | -------------------------------------------------------------------- when calling this macro
...
14 |     let template = page_title1!(,page_title);
   |                                 ^ no rules expected this token in macro call
   |
note: while trying to match meta-variable `$template:expr`
  --> tests/ui/compile_fail/variable_macro_missing_first_parameter.rs:9:1
   |
9  | #[template_stream("../../../../zero-cost-templating/test.html.hbs")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `template_stream` (in Nightly builds, run with -Z macro-backtrace for more info)
